--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
